--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,15 @@
   --nav-color: #f0efeb;
   --text-color:#f6bbd1;
 }
+
+html body{
+  width: 100%;
+  height: auto;
+  background-color: #f5f5f5;
+  color: #484b48;
+  overflow-y: scroll;
+}
+
 .loading{
   width: 200px;
   height: 120px;
@@ -30,13 +39,14 @@
 }
 .alert .close{
   position: absolute;
-  top: 0;
-  right: 0;
+  top: 50%;
+  right: 5px;
+  transform: translateY(-50%);
   width: 30px;
   height: 30px;
   background-color: #FFFFFF !important;
   color: rgb(255, 0, 0);
-  border-radius: 0 3px 0 0;
+  border-radius: 15px;
   border: none;
   font-size: 22px;
   font-weight: 800;
@@ -49,11 +59,7 @@
   background: #FFFFFF !important;
   box-shadow: 0 3px 3px #DEDEDE !important;
 }
-html body{
-  width: 100%;
-  height: auto;
-  overflow-y: scroll;
-}
+
 #root{
   width: 100%;
   height: 100%;
@@ -106,6 +112,14 @@ html body{
 .header .nav-link{
   color: var(--nav-color);
 }
+.header .nav-item:hover, .header .nav-link:focus {
+  background-color: #FFFFFF;
+  color: var(--bg-nav);
+  transition: all 0.5s;
+}
+.header .nav-link:hover{
+  color: var(--bg-nav);
+}
 .footer{
   background: var(--nav-color);
   padding-top: 10px;
@@ -148,22 +162,25 @@ html body{
 }
 .admin-wrapper{
   width: 100%;
-  min-height: 100vh;
+  height: 100vh;
   background-color: #f5f5f5;
   display: grid;
   grid-template-columns: 257px  2fr;
-  grid-template-rows: 60px auto 60px;
+  grid-template-rows: 70px auto 60px;
   grid-template-areas:
       "admin_header admin_header"
       "admin_main admin_main"
       "admin_footer admin_footer";
   gap:1px;
-  overflow-y: inherit;
+  overflow-y: fragments;
 }
 
 .admin-wrapper .admin-header{
-  position: sticky;
+  position: fixed;
   top: 0;
+  left:0;
+  width: 100%;
+  height: 70px;
   z-index: 999;
   grid-area: admin_header;
   background-color: #f5f5f5;
@@ -177,11 +194,11 @@ html body{
 }
 
 .admin-wrapper .admin-nav{
-  position: absolute;
-  top: 61px;
+  position: fixed;
+  top: 71px;
   right: -257px;
   width: 257px;
-  height: calc(100vh-61px);
+  height: 100vh;
   background-color: #FFFFFF;
   color: #343460;
   font-size: 1.15rem;
@@ -305,7 +322,11 @@ html body{
 }
 .admin-wrapper .admin-footer{
   grid-area: admin_footer;
-  background: #FFFFFF;
+}
+.admin-footer .row  > div{
+  padding-top: 10px;
+  padding-bottom: 10px;
+  text-align: center;
 }
 @media screen and (min-width: 768px){
   .quick-reports{
@@ -349,3 +370,12 @@ html body{
       gap: 8px;
   }
 }
+
+@media print {
+  @page{
+    size: landscape;
+    margin: 0.5in !important;
+    padding: 20px;
+  }
+}
+
